--- a/index.html
+++ b/index.html
@@ -1,134 +1,246 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
   <title>SAVAGE - WoW Guild</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="https://i.ibb.co/DfHhsVPY/Chat-GPT-Image-10-may-2025-01-09-47-p-m.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.11.1/tsparticles.bundle.min.js"></script>
- <style>
-  body {
-    margin: 0;
-    padding: 0;
-    background: #000;
-    overflow: hidden;
-    font-family: 'Rajdhani', sans-serif;
-    height: 100vh;
-    position: relative;
-  }
 
-  #particles-js {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-  }
-
-  .logo {
-    width: 400px;
-    height: auto;
-    opacity: 0;
-    animation: fadeInCenter 2.5s ease-out forwards;
-    filter: drop-shadow(0 0 30px #ff6600);
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    cursor: pointer;
-  }
-
-  @keyframes fadeInCenter {
-    0% {
-      opacity: 0;
-      transform: translate(-50%, -50%) scale(0.8);
+  <style>
+    :root {
+      --bg: #000;
+      --text: #E8D9B8;
+      --highlight: #FF7E00;
     }
-    100% {
-      opacity: 1;
-      transform: translate(-50%, -50%) scale(1);
-    }
-  }
-
-  /* NUEVO: Botones en fila */
-  .menu-bar {
-    position: absolute;
-    top: calc(50% + 160px);
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    gap: 30px;
-    justify-content: center;
-    z-index: 3;
-  }
-
-  .menu-bar a {
-    animation: fadeInIcon 1s ease forwards;
-    animation-delay: var(--delay, 0s);
-    opacity: 0;
-  }
-
-  .savage-icon {
-    width: 120px;
-    transition: transform 0.4s ease, filter 0.4s ease;
-    filter: drop-shadow(0 0 8px #ff6600);
-    cursor: pointer;
-  }
-
-  .savage-icon:hover {
-    transform: scale(1.1) rotate(-2deg);
-    filter: drop-shadow(0 0 18px #ffaa00);
-  }
-
-  @keyframes fadeInIcon {
-    0% { opacity: 0; transform: scale(0.8); }
-    100% { opacity: 1; transform: scale(1); }
-  }
-
-  @media (max-width: 768px) {
-    .menu-bar {
-      top: calc(50% + 140px);
-      gap: 18px;
-      flex-wrap: wrap;
-      padding: 10px;
+    * { box-sizing:border-box; }
+    body {
+      margin: 0;
+      padding: 0;
+      background: var(--bg);
+      overflow: hidden;
+      font-family: 'Rajdhani', sans-serif;
+      height: 100vh;
+      position: relative;
+      color: var(--text);
     }
 
-    .savage-icon {
-      width: 70px;
+    #particles-js {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
     }
 
     .logo {
-      width: 280px;
-      top: 40%;
+      width: 400px;
+      height: auto;
+      opacity: 0;
+      animation: fadeInCenter 2.5s ease-out forwards;
+      filter: drop-shadow(0 0 30px #ff6600);
+      position: absolute;
+      top: 45%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 2;
+      cursor: pointer;
     }
-  }
-</style>
+
+    /* cover alternativo si preferís no agregar div extra */
+/*    .logo::after {
+      content: "";
+      position: absolute;
+      top: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 2px;
+      height: 160px;
+      background: #000;
+      pointer-events: none;
+      z-index: 1;
+    } */
+
+    @keyframes fadeInCenter {
+      0% { opacity: 0; transform: translate(-50%, -50%) scale(0.8); }
+      100% { opacity: 1; transform: translate(-50%, -50%) scale(1); }
+    }
+
+    .connector-cover {
+      position: absolute;
+      top: calc(45% + 80px); /* ajustar si movés logo */
+      left: 50%;
+      transform: translateX(-50%);
+      width: 2px;
+      height: 160px;
+      background: #000;
+      pointer-events: none;
+      z-index: 1;
+    }
+
+    .menu-bar {
+      position: absolute;
+      top: calc(50% + 160px);
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      gap: 30px;
+      justify-content: center;
+      z-index: 3;
+    }
+
+    .menu-bar a {
+      animation: fadeInIcon 1s ease forwards;
+      animation-delay: var(--delay, 0s);
+      opacity: 0;
+      text-decoration: none;
+      display: inline-block;
+      -webkit-tap-highlight-color: transparent;
+      outline: none;
+      position: relative;
+    }
+    .menu-bar a img {
+      display: block;
+      user-select: none;
+      -webkit-user-drag: none;
+      border: none;
+      backface-visibility: hidden;
+      transform: translateZ(0);
+    }
+    .menu-bar a:focus,
+    .menu-bar a:active,
+    .menu-bar a:focus-visible {
+      outline: none;
+      box-shadow: none;
+    }
+
+    .savage-icon {
+      width: 120px;
+      transition: transform 0.4s ease, filter 0.4s ease;
+      filter: drop-shadow(0 0 8px #ff6600);
+      cursor: pointer;
+    }
+    .savage-icon:hover {
+      transform: scale(1.1) rotate(-2deg);
+      filter: drop-shadow(0 0 18px #ffaa00);
+    }
+
+    @keyframes fadeInIcon {
+      0% { opacity: 0; transform: scale(0.8); }
+      100% { opacity: 1; transform: scale(1); }
+    }
+
+    @media (max-width: 768px) {
+      .menu-bar {
+        top: calc(50% + 140px);
+        gap: 18px;
+        flex-wrap: wrap;
+        padding: 10px;
+      }
+      .savage-icon { width: 70px; }
+      .logo { width: 280px; top: 40%; }
+      .connector-cover {
+        top: calc(40% + 80px);
+        height: 140px;
+      }
+    }
+
+    /* Floating SoundCloud player simplified */
+    #sc-float {
+      position: fixed;
+      top: 12px;
+      left: 12px;
+      width: 50px;
+      height: 50px;
+      background: rgba(0,0,0,0.9);
+      border: 2px solid var(--highlight);
+      border-radius: 10px;
+      box-shadow: 0 0 25px rgba(255,126,0,0.7);
+      z-index: 9999;
+      overflow: visible;
+      transition: width .25s ease, height .25s ease;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    #sc-float.expanded {
+      width: 300px;
+      padding: 8px;
+      border-radius: 12px;
+      height: auto;
+    }
+    .play-icon {
+      width: 24px;
+      height: 24px;
+      background: linear-gradient(135deg,#ff7e00,#ffa33c);
+      mask: url('data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMzIgMzIiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PHBhdGggZD0iTTEwIDI0LjQzVjcuNTZsMTIuNDEgOC40MzEtMTIuNDEgOC40MzF6IiBmaWxsPSJ3aGl0ZSIvPjwvc3ZnPg==') center/contain no-repeat;
+      border-radius:50%;
+      box-shadow:0 0 10px rgba(255,126,0,0.8);
+      flex-shrink:0;
+    }
+    #sc-expanded {
+      display: none;
+      width: 100%;
+      position: relative;
+    }
+    .close-sc {
+      position: absolute;
+      top: 6px;
+      right: 6px;
+      background: transparent;
+      border: none;
+      color: var(--text);
+      font-size: 16px;
+      cursor: pointer;
+      padding: 2px 6px;
+    }
+    .header-sc {
+      font-size: 13px;
+      font-weight: 600;
+      color: #FF7E00;
+      margin-bottom:4px;
+      display:flex;
+      justify-content: space-between;
+      align-items:center;
+    }
+    #sc-player-wrapper {
+      width: 100%;
+      height: 166px;
+      border-radius: 8px;
+      overflow: hidden;
+      margin-top: 4px;
+    }
+  </style>
 </head>
 <body>
   <audio id="tribalSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_81640b1d2b.mp3?filename=magic-fire-whoosh-116426.mp3"></audio>
 
   <div id="particles-js"></div>
+
+  <!-- logo y cover que tapa la línea -->
   <img src="https://i.ibb.co/DfHhsVPY/Chat-GPT-Image-10-may-2025-01-09-47-p-m.png" alt="Logo Savage" class="logo">
+  <div class="connector-cover" aria-hidden="true"></div>
 
-<div class="menu-bar">
-  <a href="https://discord.gg/7jfYRR2qxc" target="_blank" style="--delay: 0.2s">
-    <img src="https://i.ibb.co/7JWMHmTV/Discord.png" alt="Discord" class="savage-icon">
-  </a>
-  <a href="https://guildsofwow.com/savagealliance/recruitment" target="_blank" style="--delay: 0.4s">
-    <img src="https://i.ibb.co/VkJZkb4/Aplicar.png" alt="Aplicar" class="savage-icon">
-  </a>
-  <a href="https://worldofwarcraft.blizzard.com/en-us/guild/us/drakkari/savage/" target="_blank" style="--delay: 0.6s">
-    <img src="https://i.ibb.co/YFhLdmLC/Chat-GPT-Image-10-may-2025-08-50-40-p-m.png" alt="Ver Guild" class="savage-icon">
-  </a>
-  <a href="https://www.savageoficial.online" target="_blank" style="--delay: 0.8s">
-    <img src=https://i.ibb.co/WpvVZ7xM/Chat-GPT-Image-19-may-2025-09-27-32-p-m.png" alt="Foro" class="savage-icon">
-  </a>
-  <a href="#" onclick="const q = document.getElementById('quienes-somos'); if(q) { q.style.display='block'; q.style.opacity='1'; } return false;" style="--delay: 1s">
-    <img src="https://i.ibb.co/V4j3MWH/Chat-GPT-Image-10-may-2025-09-31-43-p-m.png" alt="Reglas" class="savage-icon">
-  </a>
-</div>
+  <div class="menu-bar">
+    <a href="https://discord.gg/7jfYRR2qxc" target="_blank" style="--delay: 0.2s">
+      <img src="https://i.ibb.co/7JWMHmTV/Discord.png" alt="Discord" class="savage-icon">
+    </a>
+    <a href="https://guildsofwow.com/savagealliance/recruitment" target="_blank" style="--delay: 0.4s">
+      <img src="https://i.ibb.co/VkJZkb4/Aplicar.png" alt="Aplicar" class="savage-icon">
+    </a>
+    <a href="https://worldofwarcraft.blizzard.com/en-us/guild/us/drakkari/savage/" target="_blank" style="--delay: 0.6s">
+      <img src="https://i.ibb.co/YFhLdmLC/Chat-GPT-Image-10-may-2025-08-50-40-p-m.png" alt="Ver Guild" class="savage-icon">
+    </a>
+    <a href="https://www.savageoficial.online" target="_blank" style="--delay: 0.8s">
+      <img src="https://i.ibb.co/WpvVZ7xM/Chat-GPT-Image-19-may-2025-09-27-32-p-m.png" alt="Foro" class="savage-icon">
+    </a>
+    <a href="#" onclick="const q = document.getElementById('quienes-somos'); if(q) { q.style.display='block'; q.style.opacity='1'; } return false;" style="--delay: 1s">
+      <img src="https://i.ibb.co/V4j3MWH/Chat-GPT-Image-10-may-2025-09-31-43-p-m.png" alt="Reglas" class="savage-icon">
+    </a>
+  </div>
 
-  <div id="quienes-somos" style="display: none; position: fixed; top: 10%; left: 50%; transform: translateX(-50%); width: 90%; max-width: 800px; max-height: 70vh; overflow-y: auto; padding: 20px; background: rgba(0, 0, 0, 0.9); border: 1px solid #ff8000; border-radius: 15px; color: #ffe8c3; font-size: 1.1em; z-index: 9999; box-shadow: 0 0 20px rgba(255, 140, 0, 0.5);">
+  <div id="quienes-somos" style="display: none; position: fixed; top: 10%; left: 50%; transform: translateX(-50%); width: 90%; max-width: 800px; max-height: 70vh; overflow-y: auto; padding: 20px; background: rgba(0,0,0,0.9); border: 1px solid #ff8000; border-radius: 15px; color: #ffe8c3; font-size: 1.1em; z-index: 9999; box-shadow: 0 0 20px rgba(255,140,0,0.5);">
     <button onclick="document.getElementById('quienes-somos').style.display='none';" style="position: absolute; top: 10px; right: 10px; background: #ff4400; border: none; color: white; padding: 4px 10px; border-radius: 5px; cursor: pointer; font-weight: bold;">✖</button>
     <h2 style="text-align: center; color: #ff9933;">¿Quiénes Somos?</h2>
     <p>Somos <strong>SAVAGE</strong>, una hermandad con espíritu salvaje y compañerismo real. Buscamos jugadores comprometidos con ganas de mejorar y progresar en equipo. Nos mueve la <strong>lealtad, el respeto</strong> y la <strong>pasión por el juego</strong>.</p>
@@ -165,128 +277,141 @@
       </li>
       <li><strong>⚔️ Jerarquía de prioridades:</strong>
         <ul>
-          <li>BiS > Main > ilvl Upgrade > Off Spec > Transfiguración</li>
+          <li>BiS &gt; Main &gt; ilvl Upgrade &gt; Off Spec &gt; Transfiguración</li>
         </ul>
       </li>
     </ul>
   </div>
-<script>
-  const menu = document.getElementById('menu-circle');
 
-  function showMenu() {
-    if (!menu) return;
+  <!-- SoundCloud floating simplified player -->
+  <div id="sc-float" aria-label="Raid Music">
+    <div class="play-icon" title="Raid Music"></div>
+    <div id="sc-expanded">
+      <button class="close-sc" aria-label="Cerrar">&times;</button>
+      <div class="header-sc">
+        <div>Raid Music</div>
+      </div>
+      <div id="sc-player-wrapper">
+        <iframe id="sc-player"
+          width="100%"
+          height="100%"
+          scrolling="no"
+          frameborder="no"
+          allow="autoplay"
+          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/2033076852&color=%23ff7e00&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
+        </iframe>
+      </div>
+    </div>
+  </div>
 
-    const flash = document.createElement('div');
-    flash.style.position = 'absolute';
-    flash.style.top = '0';
-    flash.style.left = '0';
-    flash.style.width = '100%';
-    flash.style.height = '100%';
-    flash.style.zIndex = '5';
-    flash.style.background = 'radial-gradient(circle, rgba(255,160,0,0.4) 0%, rgba(0,0,0,0.8) 70%)';
-    flash.style.opacity = '0';
-    flash.style.transition = 'opacity 0.4s ease';
-    document.body.appendChild(flash);
-
-    setTimeout(() => {
-      flash.style.opacity = '1';
-      setTimeout(() => {
-        flash.style.opacity = '0';
-        setTimeout(() => document.body.removeChild(flash), 400);
-      }, 300);
-    }, 10);
-
-    menu.style.display = 'block';
-    setTimeout(() => {
-      menu.style.opacity = '1';
-      document.querySelectorAll('.savage-link').forEach(el => {
-        el.style.animationPlayState = 'running';
+  <script src="https://w.soundcloud.com/player/api.js"></script>
+  <script>
+    // sonido al hover
+    document.querySelectorAll('.savage-icon').forEach(icon => {
+      icon.addEventListener('mouseenter', () => {
+        const sound = document.getElementById('tribalSound');
+        if (sound) {
+          sound.currentTime = 0;
+          sound.play();
+        }
       });
-    }, 50);
-  }
-
-  document.querySelectorAll('.savage-icon').forEach(icon => {
-    icon.addEventListener('mouseenter', () => {
-      const sound = document.getElementById('tribalSound');
-      if (sound) {
-        sound.currentTime = 0;
-        sound.play();
-      }
     });
-  });
 
-  const logo = document.querySelector('.logo');
-  if (logo) logo.addEventListener('click', showMenu);
-
-  setTimeout(() => {
-    if (menu && (getComputedStyle(menu).display === 'none' || getComputedStyle(menu).opacity === '0')) {
-      showMenu();
-    }
-  }, 6000);
-
-  tsParticles.load("particles-js", {
-    particles: {
-      number: { value: 25 },
-      color: { value: "#ffaa00" },
-      shape: {
-        type: "char",
-        character: {
-          value: ["ᚠ", "ᚢ", "ᚦ", "ᚨ", "ᛗ", "ᛉ", "ᛟ"],
-          font: "Verdana",
-          style: "",
-          weight: "400",
-          fill: true
-        }
-      },
-      size: {
-        value: 10,
-        random: true
-      },
-      opacity: {
-        value: 0.4
-      },
-      move: {
-        enable: true,
-        speed: 0.8,
-        direction: "top",
-        outModes: "out"
-      },
-      rotate: {
-        value: { min: 0, max: 360 },
-        animation: {
-          enable: true,
-          speed: 3,
-          sync: false
-        }
-      }
-    },
-    interactivity: {
-      events: {
-        onHover: {
-          enable: true,
-          mode: "trail"
+    // partículas
+    tsParticles.load("particles-js", {
+      particles: {
+        number: { value: 25 },
+        color: { value: "#ffaa00" },
+        shape: {
+          type: "char",
+          character: {
+            value: ["ᚠ", "ᚢ", "ᚦ", "ᚨ", "ᛗ", "ᛉ", "ᛟ"],
+            font: "Verdana",
+            style: "",
+            weight: "400",
+            fill: true
+          }
         },
-        onClick: {
-          enable: false
+        size: { value: 10, random: true },
+        opacity: { value: 0.4 },
+        move: { enable: true, speed: 0.8, direction: "top", outModes: "out" },
+        rotate: {
+          value: { min: 0, max: 360 },
+          animation: { enable: true, speed: 3, sync: false }
         }
       },
-      modes: {
-        trail: {
-          delay: 0.2,
-          quantity: 1,
-          particles: {
-            color: { value: "#ffaa00" },
-            size: { value: 12 },
-            move: { speed: 0.5 },
-            opacity: { value: 0.6 }
+      interactivity: {
+        events: { onHover: { enable: true, mode: "trail" }, onClick: { enable: false } },
+        modes: {
+          trail: {
+            delay: 0.2,
+            quantity: 1,
+            particles: {
+              color: { value: "#ffaa00" },
+              size: { value: 12 },
+              move: { speed: 0.5 },
+              opacity: { value: 0.6 }
+            }
           }
         }
-      }
-    },
-    background: { color: "#000" }
-  });
-</script>
+      },
+      background: { color: "#000" }
+    });
+
+    // lógica: foco controlado y SoundCloud
+    (function(){
+      document.querySelectorAll('.menu-bar a').forEach(a => {
+        a.addEventListener('mouseup', () => a.blur());
+      });
+      document.addEventListener('mousedown', e => {
+        if (!e.target.closest('.menu-bar a')) {
+          document.querySelectorAll('.menu-bar a').forEach(a => a.blur());
+        }
+      });
+
+      const scFloat = document.getElementById('sc-float');
+      const expanded = document.getElementById('sc-expanded');
+      const closeBtn = expanded.querySelector('.close-sc');
+      const iframe = document.getElementById('sc-player');
+      let widget = SC.Widget(iframe);
+      let userInteracted = false;
+
+      const open = () => {
+        scFloat.classList.add('expanded');
+        expanded.style.display = 'block';
+      };
+      const close = () => {
+        scFloat.classList.remove('expanded');
+        expanded.style.display = 'none';
+      };
+
+      scFloat.addEventListener('mouseenter', open);
+      scFloat.addEventListener('click', e => {
+        userInteracted = true;
+        open();
+        widget.play();
+      });
+      closeBtn.addEventListener('click', e => {
+        e.stopPropagation();
+        close();
+        widget.pause();
+      });
+
+      const tryPlay = () => {
+        if (userInteracted) return;
+        userInteracted = true;
+        widget.play();
+        window.removeEventListener('click', tryPlay);
+      };
+      window.addEventListener('click', tryPlay, { once: true });
+
+      widget.bind(SC.Widget.Events.PLAY, () => {
+        // opcional feedback
+      });
+    })();
+  </script>
 </body>
 </html>
+
 
 
